# tyto-os

./: .gitpod.yml  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
boot/: Cargo.toml  build.rs
boot/src/: main.rs
boot_lib/: Cargo.toml
boot_lib/src/: lib.rs
bootloader/: Cargo.toml
bootloader/src/: elf.rs  main.rs
kernel/: Cargo.toml
kernel/src/: interrupt.rs  lib.rs
kernel/src/data/: irq_lock.rs  late_init.rs  mod.rs
kernel/src/device/: mod.rs  serial.rs
kernel/src/device/ps2/: keyboard.rs  mod.rs
kernel/src/diag/: logger.rs  mod.rs  terminal.rs
kernel/src/graphics/: framebuffer.rs  framebuffer_term.rs  mod.rs
kernel/src/spin/: mod.rs  once.rs  once_cell.rs
kernel/src/task/: executor.rs  mod.rs
qemu/: Cargo.toml  build.rs
qemu/src/: main.rs
src/: colors.rs  interrupt.rs  interrupts.rs  lib.rs  main.rs
src/device/: mod.rs
src/device/ps2/: keyboard.rs
src/task/: executor.rs
