[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10"
spin = { version = "0.9", features = ["lazy"] }
uart_16550 = "0.2"
x86_64 = "0.14"
vga = "0.2"

[profile.release]
panic = "abort"
lto = true

[profile.dev]
panic = "abort"

[workspace]
members = [".", "boot"]
