[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.15", features = ["exts"] }
uefi-services = "0.12"
log = "0.4.14"
goblin = { version = "0.5", features = [
    "elf64",
    "elf32",
    "archive",
    "endian_fd",
], default-features = false }
x86_64 = "0.14.7"
uart_16550 = "0.2.15"
elf_rs = "0.2.0"
arrayvec = { version = "0.7", default-features = false }
kernel = { path = "../kernel" }
boot_lib = { path = "../boot_lib" }
