[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.15"
crossbeam-queue = { version = "0.3", features = [
    "alloc",
    "nightly",
], default-features = false }
pc-keyboard = "0.5"
futures-util = { version = "0.3", features = [
    "alloc",
], default-features = false }
log = "0.4"
x86_64 = "0.14"
ps2 = "0.2"
boot_lib = { path = "../boot_lib" }
spin = "0.9"
embedded-graphics = "0.7"
embedded-graphics-core = "0.3"
noto-sans-mono-bitmap = "0.1"
uart_16550 = "0.2"
pic8259 = "0.10"
